@@ -1,5 +1,9 @@
 1.1 (not yet released):
-- Add the automatic generation and installation of man pages for all ORM
+- Add a spec file for the creation of a RPM for ORM (use "make rpm" to create
+it).
+- Add the missing top-level Makefile.
+- Improve the man page for the ORM script.
+- Add the automatic generation and installation of man pages for all ORM.
 scripts.
 
 1.0:
